[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Samer Odeh <samerodeh220@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.1.7"
pandas = "^1.3.2"
keras = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
